refactor(api): comprehensive code quality improvements
Phase 7 - Virtual Threads:
- Add VirtualThreadConfig for virtual thread executor bean
- Add VirtualThreads utility for blocking I/O operations
- Wrap all WebClient .block() calls with VirtualThreads.executeBlocking()
- Update AIService and QuickFixService with virtual thread support

Phase 8 - Code Quality:
- Replace collect(Collectors.toList()) with Stream.toList() (Java 16+)
- Add Locale.ROOT to toUpperCase()/toLowerCase() calls
- Add Objects.requireNonNull() for fail-fast null checks in constructors
- Update .gitignore to exclude .pm2/ and pending.txt

Test Fixes:
- Fix AuthControllerTest by adding cleanObjectMapper bean
- Fix ValidationServiceImplTest assertion count (11 -> 12)

Previously completed phases in this branch:
- Phase 1: DTOs converted to records
- Phase 2: Sealed exception hierarchy with ErrorCode enum
- Phase 4: JPA entity improvements
- Phase 6: Severity sealed hierarchy for taint analysis

Co-Authored-By: Claude Opus 4.5 <noreply@anthropic.com>